--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,25 @@
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+
+    <!-- <Font-awesome> -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
 
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span>tweeter</span>
+      <div class="container">
+        <div class="nav-bar">
+          <span class="title">tweeter</span>
+          <div class="right-items">
+          <span class="tweeting"><b>Write&nbsp;</b> a new tweet</span>
+          <i class="fa-solid fa-angles-down"></i>
+          </div>
+        </div>
+      </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
