--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <div class="container">
+      <div class="container-nav">
         <div class="nav-bar">
           <span class="title">tweeter</span>
           <div class="right-items">
@@ -56,6 +56,8 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <p>This is happening! The world is rotating at this time while the clock is ticking! Can you believe it!? Relax! This is just a joke :) If you are not sure if this is a joke or not, check your clock if you have one. </p>
+    </main>
   </body>
 </html>
