add tweet-element html & css

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet-element.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -69,6 +70,24 @@
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
+      </section>
+      <section class="tweet-element">
+        <article>
+          <header class="tweet">
+            <span> Newton</span>
+            <div><i class="fa-duotone fa-user-tie-hair"></i></div>
+            <p class="statement">Every object will remain at rest or in uniform motion in a straight line unless compelled to change its state by the action of an external force.</p>
+            <span>@SirIsaac</span>
+          </header>
+          <footer>
+            <p><span>10 days ago</span></p>
+              <div class="icons">
+                <i class="fa-solid fa-flag" ></i>
+                <i class="fa-solid fa-retweet"></i> 
+                <i class="fa-solid fa-heart"></i>
+              </div>
+          </footer>
+        </article>
       </section>
     </main>
   </body>
