add hover function to tweet element

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
             <button type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
-        </form>
+        </form><br>
       </section>
       <section class="tweet-element">
         <article>
@@ -77,14 +77,14 @@
             <span> Newton</span>
             <div><i class="fa-duotone fa-user-tie-hair"></i></div>
             <p class="statement">Every object will remain at rest or in uniform motion in a straight line unless compelled to change its state by the action of an external force.</p>
-            <span>@SirIsaac</span>
+            <span class="handle">@SirIsaac</span>
           </header>
           <footer>
             <p><span>10 days ago</span></p>
               <div class="icons">
-                <i class="fa-solid fa-flag" ></i>
-                <i class="fa-solid fa-retweet"></i> 
-                <i class="fa-solid fa-heart"></i>
+                <i id="flag" class="fa-solid fa-flag" ></i>
+                <i id="retweet" class="fa-solid fa-retweet"></i> 
+                <i id="heart" class="fa-solid fa-heart"></i>
               </div>
           </footer>
         </article>
