add a new profile icon; remove p tag from footer; adjust css accordingly

--- a/public/index.html
+++ b/public/index.html
@@ -74,13 +74,12 @@
       <section class="tweet-element">
         <article>
           <header class="tweet">
-            <span> Newton</span>
-            <div><i class="fa-duotone fa-user-tie-hair"></i></div>
+            <span><i class="fa-regular fa-user"></i> Newton</span>
             <p class="statement">Every object will remain at rest or in uniform motion in a straight line unless compelled to change its state by the action of an external force.</p>
             <span class="handle">@SirIsaac</span>
           </header>
           <footer>
-            <p><span>10 days ago</span></p>
+            <span>10 days ago</span>
               <div class="icons">
                 <i id="flag" class="fa-solid fa-flag" ></i>
                 <i id="retweet" class="fa-solid fa-retweet"></i> 
