fix the functions on client.js; minor changes on tweet-element css

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       </div>
     </nav>
 
-    <header>
+    <header class='header'>
       <div class="avatar">
         <img src="/images/profile-hex.png">
       </div>
@@ -71,23 +71,9 @@
           </div>
         </form><br>
       </section>
-      <section class="tweet-element">
-        <article>
-          <header class="tweet">
-            <span><i class="fa-regular fa-user"></i> Newton</span>
-            <p class="statement">Every object will remain at rest or in uniform motion in a straight line unless compelled to change its state by the action of an external force.</p>
-            <span class="handle">@SirIsaac</span>
-          </header>
-          <footer>
-            <span>10 days ago</span>
-              <div class="icons">
-                <i id="flag" class="fa-solid fa-flag" ></i>
-                <i id="retweet" class="fa-solid fa-retweet"></i> 
-                <i id="heart" class="fa-solid fa-heart"></i>
-              </div>
-          </footer>
-        </article>
-      </section>
+
+      <section class="tweet-element"></section>
+
     </main>
   </body>
 </html>
