implement media query for desktop version; add a div to index.html and use it to implement media query

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         </div>
       </div>
     </nav>
-
+    <div class="content-container">
     <header class='header'>
       <div class="avatar">
         <img src="/images/profile-hex.png">
@@ -88,5 +88,6 @@
       <section class="tweet-element"></section>
 
     </main>
+    </div>
   </body>
 </html>
